--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -169,7 +169,16 @@
 
             </TableLayout>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnSucursalForm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginHorizontal="130dp"
+            android:text="Más" />
     </LinearLayout>
     </LinearLayout>
     </ScrollView>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
